# MCP

2_MCP_local_server/: 1_main.py  expenses.db  main.py  pyproject.toml
3_MCP_remote_server/: README.md  expense_categories.json  expense_db.db  main.py  main_old.py  main_oldcode.py  pyproject.toml
4_MCP_proxy_server/: main.py  pyproject.toml
5_MCP_client_project/5_1_mcp_local_server/: main.py  pyproject.toml
5_MCP_client_project/5_3_mcp_client/: client1.py  main.py  pyproject.toml
